# portfolio_analyzer

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: command.rs  error.rs  main.rs  mbank_trade_report_csv_handler.rs  mbank_upside_csv_handler.rs
cli/src/output/: csv.rs
csv_util/: Cargo.toml
csv_util/src/: csv.rs  lib.rs  pretty.rs
predictions/upside/: Cargo.toml  readme
predictions/upside/src/: lib.rs  upside.rs
reports/average_cost_basis_profit_report/: Cargo.toml  readme
reports/average_cost_basis_profit_report/src/: data_frame_factory.rs  report.rs  report_old.rs
reports/average_cost_basis_profit_report/tests/: report_test.rs  test_data.rs
reports/general_report/: Cargo.toml
reports/general_report/src/: data_frame_factory.rs  lib.rs  report.rs
reports/general_report/tests/: report_general_test.rs  test_data.rs
shared_contracts/: Cargo.toml
shared_contracts/src/: errors.rs
shared_contracts/src/models/: general_report.rs  mod.rs  money.rs  report.rs  trade_order.rs
stock_data/gpw/: Cargo.toml  readme
stock_data/gpw/src/: market_data.rs
stock_data/gpw/tests/data/: stocks_data.xls
trade_loaders/mbank_emakler_csv/: Cargo.toml  readme
trade_loaders/mbank_emakler_csv/src/: lib.rs  loader.rs  mapper.rs  model.rs  read.rs  test_trade_order_csv.rs
trade_loaders/mbank_emakler_csv/src/loader/: loader.rs  mapper.rs  mod.rs  model.rs
trade_loaders/mbank_emakler_csv/tests/: convert_csv_to_trade_order.rs  report_test.rs
trade_loaders/mbank_emakler_csv/tests/data/: eMAKLER_historia_zlecen — kopia (2).Csv  eMAKLER_historia_zlecen — kopia.Csv  eMAKLER_historia_zlecen.Csv  test.Csv
trade_loaders/tests/: test_trade_order_csv.rs
trade_loaders/tests/data/: eMAKLER_historia_zlecen.Csv
util/: Cargo.toml
util/src/: csv.rs  file.rs  lib.rs  polars.rs
