[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
csv = { version = "1.3" }
thiserror = "2.0"
shared_contracts = { path = "../shared_contracts" }
mbank_emakler_csv= { path ="../trade_loaders/mbank_emakler_csv"}
csv_util = { path ="../csv_util"}
average_cost_basis_profit_report= { path ="../reports/average_cost_basis_profit_report"}
fmt = "0.1.0"
