[package]
name = "shared_contracts"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = { version = "1.38", features = ["serde-with-float"] }
chrono = "0.4"
thiserror = "2.0"
polars = { version = "0.50", features = ["serde"] }
strum = "0.26"
strum_macros = "0.26"
serde = { version = "1.0", features = ["derive"] }
