[package]
name = "shared_contracts"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
polars = { version = "0.51", features = ["serde"] }
strum = "0.26"
strum_macros = "0.26"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
calamine = "0.31"
