[package]
name = "general_report"
version = "0.1.0"
edition = "2024"

[features]
test-access = []

[dependencies]
shared_contracts = { path = "../../shared_contracts" }
polars = { version = "0.50", features = ["lazy", "serde", "full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
rust_decimal = "1.38"
itertools = "0.14"
