[package]
name = "average_cost_basis_profit_report"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[features]
test-access = []

[dependencies]
util = { path = "../../util" }
shared_contracts = { path = "../../shared_contracts" }
polars = { version = "0.51", features = ["lazy", "serde", "full","dtype-struct", "temporal","csv"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
