[package]
name = "mbank_emakler_csv"
version = "0.1.0"
edition = "2024"

[features]
test-access = []

[dependencies]
shared_contracts = { path = "../../shared_contracts" }
util = { path = "../../util" }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
chrono =  { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
encoding_rs_io = "0.1"
encoding_rs = "0.8"
